# BTM-algo

./: .CMakeLists.txt.swp  CMakeLists.txt  Doxyfile  GISdata.sqlite  GeeksInSneaks.pro  Makefile  Makefile.Debug  Makefile.Release  README.md  admin.cpp  admin.h  admin.ui  db.cpp  db.h  display_team.cpp  display_team.h  display_team.ui  edit_souvenirs.cpp  edit_souvenirs.h  edit_souvenirs.ui  edit_teams.cpp  edit_teams.h  edit_teams.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_script.GeeksInSneaks.Debug  object_script.GeeksInSneaks.Release  teamsarena.cpp  teamsarena.h  teamsarena.ui  trip.cpp  trip.ui  ui_display_team.h  ui_login.h  ui_mainwindow.h  (+1 more)
Admin/: admin.cpp  admin.h  admin.ui
DB/: GISdata.sqlite  nba_information.sql
Project-2-CS1D/: CMakeLists.txt
Project-2-CS1D-dev 2/: GeeksInSneaks.pro  README.md
Project-2-CS1D-dev 2/Admin/: admin.cpp  admin.ui
UI/display_purchases/: display_purchases.cpp  display_purchases.h  display_purchases.ui
UI/display_team/: display_team.cpp  display_team.h  display_team.ui
UI/edit_souvenirs/: edit_souvenirs.cpp  edit_souvenirs.h  edit_souvenirs.ui
UI/edit_teams/: edit_teams.cpp  edit_teams.h  edit_teams.ui
UI/login/: login.cpp  login.h  login.ui
UI/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  purchase_souvenirs.cpp  purchase_souvenirs.h
UI/purchase_souvenirs/: purchase_souvenirs.cpp  purchase_souvenirs.h  purchase_souvenirs.ui
UI/trip/: trip.cpp  (+2 more)
html/: admin_8h_source.html  annotated.html  classMainWindow-members.html  classMainWindow.html  classadmin-members.html  classadmin.html  classadmin__coll__graph.map  classadmin__coll__graph.md5  classdb-members.html  classdb.html  classdisplay__purchases-members.html  classdisplay__purchases.html  classdisplay__purchases__coll__graph.map  classdisplay__purchases__coll__graph.md5  classdisplay__team-members.html  classdisplay__team.html  classdisplay__team__coll__graph.map  classdisplay__team__coll__graph.md5  classedit__souvenirs-members.html  classedit__souvenirs.html  classedit__souvenirs__coll__graph.md5  classedit__souvenirs__inherit__graph.map  classedit__teams-members.html  classedit__teams.html  classedit__teams__coll__graph.md5  classedit__teams__inherit__graph.map  classes.html  classlogin-members.html  classlogin.html  classlogin__coll__graph.map  classlogin__coll__graph.md5  classmanage__teams-members.html  classmanage__teams.html  classmap-members.html  classmap.html  classmap__coll__graph.map  classmap__inherit__graph.md5  classpurchase__souvenirs-members.html  classpurchase__souvenirs.html  classpurchase__souvenirs__coll__graph.md5  (+57 more)
latex/: annotated.tex  classMainWindow.tex  classadmin.tex  classadmin__inherit__graph.md5  classdb.tex  classdisplay__purchases.tex  classdisplay__purchases__coll__graph.md5  classdisplay__team.tex  classdisplay__team__coll__graph.md5  classedit__souvenirs.tex  classedit__souvenirs__inherit__graph.md5  classedit__teams.tex  classedit__teams__coll__graph.md5  classlogin.tex  classlogin__inherit__graph.md5  classmanage__teams.tex  classmap.tex  classmap__inherit__graph.md5  classpurchase__souvenirs.tex  classpurchase__souvenirs__inherit__graph.md5  classtrip.tex  classtrip__coll__graph.md5  hierarchy.tex  md_README.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structCity.tex  structDistance.tex
manage_teams/: manage_teams.cpp  manage_teams.h
map/: map.cpp  map.h
(+27 files in other folders)
